# Hands-On-ROS-for-Robotics-Programming

./: README.md
Chapter10_Deep_Learning/models_spawn_library/: CMakeLists.txt
Chapter10_Deep_Learning_/models_spawn_library/: package.xml
Chapter10_Deep_Learning_/tensorflow_gopigo/: CMakeLists.txt  package.xml
Chapter11_OpenAI_Gym/cart-pole/: cart-pole_animation.ipynb  cart-pole_env.py
Chapter11_OpenAI_Gym/taxi/: Taxi-env.py  Taxi-v3.ipynb  Taxi-v3.py
Chapter11_Reinforcement_Learning/gopigo3_dqn/: CMakeLists.txt  setup.py
Chapter11_Reinforcement_Learning/gopigo3_gazebo/: CMakeLists.txt  package.xml
Chapter11_Reinforcement_Learning/gopigo3_model/: package.xml
Chapter11_Reinforcement_Learning/gopigo3_model/urdf/: gopigo3.gazebo
Chapter12_OpenAI_Gym/cart-pole/: CartPole-v0.py  cart-pole_animation.ipynb
Chapter12_OpenAI_Gym/lunar-lander/: lunar-lander.py  lunar-lander_animation.ipynb
Chapter12_OpenAI_Gym/taxi/: Taxi-v3.ipynb
Chapter12_Reinforcement_Learning/: README.md
Chapter12_Reinforcement_Learning/gopigo3_dqn/: CMakeLists.txt  package.xml
Chapter12_Reinforcement_Learning/gopigo3_dqn/launch/: gopigo3_dqn_stage_1.launch  gopigo3_dqn_stage_2-test.launch  gopigo3_dqn_stage_2.launch
Chapter12_Reinforcement_Learning/gopigo3_dqn/nodes/: gopigo3_dqn_stage_1  gopigo3_dqn_stage_2  gopigo3_dqn_stage_2-test
Chapter12_Reinforcement_Learning/gopigo3_dqn/save_model/: stage_1_400.h5  stage_1_410.h5  stage_1_420.h5  stage_1_430.h5  stage_2_1000.h5  stage_2_1380.h5  stage_2_1390.h5  stage_2_1400.h5  stage_2_1410.h5
Chapter12_Reinforcement_Learning/gopigo3_dqn/src/gopigo3_dqn/: environment_stage_2.py  respawnGoal.py
Chapter12_Reinforcement_Learning/gopigo3_gazebo/: CMakeLists.txt
Chapter12_Reinforcement_Learning/gopigo3_model/: CMakeLists.txt
Chapter2_Unit_Tests/: README.md
Chapter2_Unit_Tests/DI-IMU/: IMU_libraries.ipynb  IMU_reading.ipynb
Chapter2_Unit_Tests/DI-distance/: di-distance-easygopigo_mm.py  di-distanceSensor.ipynb  di-distance_cm.py
Chapter2_Unit_Tests/DI-lineFollower/: lineFollower_libraries.ipynb
Chapter2_Unit_Tests/DI-sensors-Distance/: distanceSensor_libraries.ipynb
Chapter2_Unit_Tests/DI-servo_package/: servoCalibration.ipynb
Chapter2_Unit_Tests/PiCamera/: Taking Photos.ipynb
Chapter2_Unit_Tests/di-IMU/: IMU_reading.py
Chapter2_Unit_Tests/drivingAround/: 1-easyMotors.py  2-driveSquare.py  3-circularMoves.py  4-drawEight.py  5-accelerateForward.py
Chapter2_Unit_Tests/img/: 1_Moving_Around.ipynb  2_The_Environment.ipynb
Chapter2_Unit_Tests/lessons_GettingStarted/: 1_Moving_Around.ipynb  2_The_Environment.ipynb  First Ride Around.ipynb  Hardware Testing.ipynb
Chapter3_ROS_basics/: CMakeLists.txt  README.md  doubler.py  package.xml  topic_publisher.py  topic_subscriber.py
Chapter4_RViz_basics/: CMakeLists.txt  README.md  package.xml
Chapter4_RViz_basics/launch/: gopigoMinimal_rviz.launch  gopigoMinimal_rviz_simple.launch
Chapter4_RViz_basics/rviz/: default.rviz  gopigoMinimal.rviz
Chapter4_RViz_basics/urdf/: gopigoMinimal.urdf
Chapter5_Gazebo_basics/: CMakeLists.txt  README.md  package.xml
Chapter5_Gazebo_basics/launch/: gopigo_gazebo.launch
Chapter5_Gazebo_basics/urdf/: gopigo.gazebo  gopigo.urdf
Chapter6_ROS_programming/: LICENSE  README.md
Chapter6_ROS_programming/bagFiles/: 2019-08-15-20-36-36_distanceSensor.bag
Chapter6_ROS_programming/piCamera/: captureFile.py  capturePIL.py  captureStream.py  param-raspicam_node.yml
Chapter6_ROS_programming/pkg_mygopigo/: CMakeLists.txt  README.md  package.xml
Chapter7_Robot_control_simulation/: CMakeLists.txt  package.xml
Chapter7_Robot_control_simulation/launch/: spawn.launch
Chapter7_Robot_control_simulation/urdf/: gopigo.gazebo
Chapter8_Virtual_SLAM/: README.md
Chapter8_Virtual_SLAM/gopigo3_description/: package.xml
Chapter8_Virtual_SLAM/gopigo3_description/launch/: gopigo3_basic_rviz.launch  gopigo3_rviz.launch
Chapter8_Virtual_SLAM/gopigo3_description/rviz/: amcl.rviz  mapping.rviz
Chapter8_Virtual_SLAM/gopigo3_description/urdf/: gopigo3.gazebo  gopigo3_basic.gazebo
Chapter8_Virtual_SLAM/virtual_slam/: CMakeLists.txt  package.xml
Chapter8_Virtual_SLAM/virtual_slam/config/: global_costmap_params.yaml
Chapter8_Virtual_SLAM/virtual_slam/launch/: amcl.launch  gmapping.launch  gopigo3_basic_world.launch  gopigo3_navigation.launch  gopigo3_rviz_gmapping.launch  gopigo3_slam.launch  gopigo3_world.launch  move_base.launch
Chapter8_Virtual_SLAM/virtual_slam/maps/: map_hexagon.pgm  map_hexagon.yaml  map_stage_1.pgm  map_stage_1.yaml  map_stage_2.pgm  map_stage_2.yaml  test_map.yaml
Chapter8_Virtual_SLAM/virtual_slam/models/square_world/: model.config  model.sdf
Chapter8_Virtual_SLAM/virtual_slam/scripts/: wanderAround.py
Chapter8_Virtual_SLAM/virtual_slam/worlds/: clearpath_playpen.world  stage_1.world  stage_2.world
Chapter8_Virtual_SLAM_/gopigo3_description/: CMakeLists.txt  package.xml
Chapter8_Virtual_SLAM_/gopigo3_description/launch/: rover_rviz.launch
Chapter8_Virtual_SLAM_/gopigo3_description/meshes/: IR_Sensor.stl  IR_Sensor_Sharp_GP2Y.stl  gp2y0a02yk0f_IR_rangeSensor.stl  lidar.igs  lidar.stl  rplidar-A1M8.dae
Chapter8_Virtual_SLAM_/gopigo3_description/rviz/: rover_model.rviz
Chapter8_Virtual_SLAM_/gopigo3_description/urdf/: gopigo3.gazebo  gopigo3_basic.gazebo  rover.gazebo  rover.xacro
Chapter8_Virtual_SLAM_/virtual_slam/: CMakeLists.txt
Chapter9_GoPiGo3_SLAM/: README.md
Chapter9_GoPiGo3_SLAM/gopigo3_navigation/: CMakeLists.txt  LICENSE  package.xml  robot.rviz
(+354 files in other folders)
