<?xml version="1.0"?>
<package>
  <name>gopigo3_description</name>
  <version>0.0.1</version>
  <description>description package of the GoPiGo3 robot</description>
  <maintainer email="brjapon@therobotacademy.com">Bernardo R. Japon</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
