<?xml version="1.0"?>
<package>
  <name>virtual_slam</name>
  <version>0.0.1</version>
  <description>all the plugina and gazebo things of the Rover robot</description>

  <maintainer email="venthan.thiru@gmail.com">thiru_ashok</maintainer>

  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
