<?xml version="1.0"?>
<package>
  <name>gopigo3_description</name>
  <version>0.0.1</version>
  <description>description package of the Rover robot</description>

  <maintainer email="venthan.thiru@gmail.com">thiru_ashok</maintainer>

  
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
